--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -2,7 +2,7 @@ header {
   /* border: 1px solid black; */
   height: 80px;
   background: rgb(116, 114, 114);
-  padding-top: 10px;
+  padding: 10px 0;
   border-radius: 1%;
   color: white;
 }
@@ -56,7 +56,6 @@ section li {
 
 article {
   /* border: 1px solid black; */
-  /* float: left; */
   margin: 5px 10px;
   width: 48%;
   margin-bottom: 30px;
@@ -71,11 +70,10 @@ aside {
   /* border: 1px solid black; */
   position: absolute;
   right: 0;
-  top: 153px;
-  /* float: right; */
-  width: 46%;
+  top: 163px;
+  width: 49%;
   margin: 5px 10px;
-}
+} 
 
 aside h4 {
   text-align: center;
@@ -128,7 +126,7 @@ footer {
 }
 
 .fa-jsfiddle {
-  background: gray;
+  background: purple;
   color: white;
 }
 input[type=range]  {
