--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -233,6 +233,18 @@ div.stripe4 {
     font-size: 60px; */
 }
 
+/* .skills {
+    display: flex;
+    height: 150px;
+    width: 500px; */
+}
+.hcj {
+    display: grid;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+}
+
 .list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -241,9 +253,12 @@ div.stripe4 {
     font-size: 40px;
     /* justify-content: center; */
     align-content: center;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
 }
 
+.list p {
+    padding: 50px;
+}
 .container16 {
     height: 70px;
     border: 2px solid black;
@@ -307,6 +322,17 @@ div.stripe5 {
 }
 
 
+@media (min-width: 992px) {
+    .title2 {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .title {
+        display: none;
+    }
+}
 
 @media (max-width: 576px) {
     .title-container {
