--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -6,24 +6,35 @@ body {
 nav {
   color: white;
   text-align: center;
-  font-size: 11px;
+  font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 5px;
   padding-bottom: 5px;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+    background-color: none;
+    }
+
+li {
+    display: inline;
+    padding: 8px;    
 }
+nav a { color: white;}
+a:link { text-decoration: none;}
+a:visited {text-decoration: none;}
+a:hover {text-decoration: none; color: red;}
+a:active { text-decoration: underline; }
 
-.center {display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 340px;
-  height: 343px;
-  padding-top: 25px;
-  padding-bottom: 10px }
 
-body{ color: white;
+body {
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
- padding-top: 50px; 
+ padding-top: 15px; 
  }
 
 h1 { color:white;
@@ -36,20 +47,18 @@ p { font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: left;
   color: white;
-  line-height: 35px
-  }
-.content{
+  line-height: 35px}
+
+.content {
   padding: 0px;
   clear: left;
-  margin: 20px 1%;
+  margin: 0px;
   }
-  .content p{
+  .content p {
   -webkit-column-count: 2;
-  -webkit-column-gap: 50px; 
+  -webkit-column-gap: 60px; 
   -webkit-column-rule: 3px solid #ccc;
-  text-align: left;
-
-}
+  text-align: left;}
 
 h2 { color: red;
 text-align: left;
@@ -59,7 +68,7 @@ padding-top:50px;}
 
 aside {
   width: 20%;
-  margin-left: 500px;
+  margin-left: 1px;
   float: right;
   box-shadow: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
@@ -77,11 +86,16 @@ footer {
   line-height: 35px;
   text-align: center; }
 
-  section p { 
+section p { 
  color: white;
  text-align: left;
  font-size: 15px;
  font-family: Arial, Helvetica, sans-serif;
- padding: top 10px;
-    
-  }
+ padding: top 10px; }
+
+.work-histoy {
+  font-size: 1px; 
+  text-align: left;
+  color: white; 
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1px;}
