Made changes rv1

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -68,7 +68,7 @@ padding-top:50px;}
 
 aside {
   width: 20%;
-  margin-left: 1px;
+  margin-left: 500px;
   float: right;
   box-shadow: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
@@ -98,4 +98,4 @@ section p {
   text-align: left;
   color: white; 
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 1px;}
+  max-lines: 500px;}
