--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,18 +1,30 @@
 header{
+  //background-color:violet;
+  //float: center;
   text-align: center;
+  border: 2px solid black;
+}
+nav{
+  background-color: rgb(199, 193, 193);
 }
 body{
   background-image: linear-gradient(yellow,violet);
 }
 main {
+  background-image: linear-gradient(violet,yellow);
   border: 2px solid black;
   width: 35%;
-  height: 80%;
+  height: 75%;
   float: left;
 }
 aside{
+  background-image: linear-gradient(violet,yellow);
   border: 2px solid black;
   width: 35%;
-  height: 80%;
+  height: 75%;
   float: right;
+}
+footer{
+  height: 5%;
+  clear:both;
 }
