added new info to employment section

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,9 +1,8 @@
 
 .title {
-    color: red;
+    color: whitesmoke;
     text-align: center;
 }
-
-/* body {
-    background-image: url('../images/ss.jpg');
-} */
+body {
+   background-image: url('../images/ss.jpg');
+}
