init new branch

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   font-family: sans-serif;
+  
 
 }
 header {
@@ -14,6 +15,7 @@ header {
   background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/60/62/4857a5f94f17876.jpg)
 }
 #section {
+  background-image: url(https://2016.export.gov/texas/build/groups/public/@eg_us_tx/documents/webcontent/~export/eg_us_tx_019269~27~DCT_Center_Content_2col/340555-6.jpg);
   position: fixed;
   float: unset;
   align-content: center;
@@ -39,6 +41,7 @@ header {
 #section ul li {
   list-style: square;
   font-weight: bold;
+  
 
 }
 
@@ -51,7 +54,7 @@ header {
   text-align: center;
   width: 550px;
   height: 54%;
-  background-color: rgb(179, 208, 235);
+  background-color: rgb(67, 13, 216);
   line-height: 100px;
   padding: 0%;
   margin-top: 0px;
@@ -66,7 +69,7 @@ header {
 }
 aside {
   display: block;
-  color: rgb(4, 109, 13)
+  color: white;
 }
 
 article {
