--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -66,6 +66,7 @@ footer {
         "story3 story4"
 
     }
+}
 @media (min-width: 768px) and (max-width: 1280px) {
     main {
         display: grid;
@@ -73,8 +74,9 @@ footer {
         grid-template-areas: 
         "story1 story1"
         "story1 story1"
-        "story4 story4"
-        "story2 story2"}
+        "story2 story2"
+        "story3 story3"
+        "story4 story4"}
     .container {
         display: grid;
         grid-gap: 10px;
@@ -87,3 +89,4 @@ footer {
         "footer footer";
         }
     }
+}
