--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,92 +1,145 @@
+*{box-sizing: border-box;}
+header {
+    text-align: center;
+}
+.tablet, .mobile {
+    visibility: hidden;
+}
+.desktop {
+    background-color: aquamarine;
+}
 .container {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-    "header"
-    "nav"
-    "main"
-    "footer";
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px 200px 200px;
+    grid-row: auto;
+    grid-gap: 20px;
 }
-header {
-    background-color: blue;
-    grid-area: header;
+.container div {
+    border: solid red 1px;
 }
-header h1 {
-    color:white;
-    font-size: 50px;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.container div:nth-child(1) {
+    grid-column: 1 / 3;
 }
-nav {
-    background-color: rgb(0, 255, 128);
-    grid-area: nav;
+.container div:nth-child(2) {
+    grid-column: 3 / 5;
 }
-nav ul{
-    display:flex;
-    justify-content: space-around;
+.container div:nth-child(3) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
 }
-main {
-    background-color: blue;
-    grid-area: main;
-    display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas: 
-        "story1"
-        "story2"
-        "story3"
-        "story4"
+.container div:nth-child(4) {
+    grid-column: 3 / 4;
 }
-main div {
-    width: 80%;
-    height: 50%;
+.container div:nth-child(5) {
+    grid-column: 4 / 5;
 }
-.story1 {
-    grid-area: story1;
+.container div:nth-child(6) {
+    grid-column: 3 / 5;
 }
-.story2 {
-    grid-area: story2;
+.container div:nth-child(7) {
+    grid-column: 1 / 2;
 }
-.story3 {
-    grid-area: story3;
+.container div:nth-child(8) {
+    grid-column: 2 / 3;
 }
-.story4 {
-    grid-area: story4;
+.container div:nth-child(9) {
+    grid-column: 3 / 4;
 }
-footer {
-    background-color:rgb(0, 255, 128);
-    grid-area: footer;
+.container div:nth-child(10) {
+    grid-column: 4 / 5;
 }
-@media (min-width: 481px) and (max-width: 767px) {
-    main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        "story1 story2"
-        "story3 story4"
-
-    }
-}
-@media (min-width: 768px) and (max-width: 1280px) {
-    main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        "story1 story1"
-        "story1 story1"
-        "story2 story2"
-        "story3 story3"
-        "story4 story4"}
+@media (min-width: 481px) and (max-width: 1024px) {
     .container {
         display: grid;
-        grid-gap: 10px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-        "header header"
-        "nav nav"
-        "main main"
-        "main main"
-        "footer footer";
-        }
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 200px 200px 200px 200px 200px 200px 200px 200px ;
+        grid-gap: 20px;
+    }
+    .desktop, .mobile {
+        visibility: hidden;
+    }
+    .tablet {
+        visibility: visible;
+        background-color: aquamarine;
+    }
+    .container div:nth-child(1) {
+        grid-column: 1 / -1;
+        grid-row: 1 / 3;
+    }
+    .container div:nth-child(2) {
+       grid-column: 1 / 3;
+       grid-row: 3 / 5;
+    }
+    .container div:nth-child(3) {
+        grid-column: 3 / 5;
+        grid-row: 3 / 5;
+    }
+    .container div:nth-child(4) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(5) {
+       grid-column: 1 / 2;
+    }
+    .container div:nth-child(6) {
+        grid-column: 2 / 3;
+    }
+    .container div:nth-child(7) {
+        grid-column: 3 / 4;
+    }
+    .container div:nth-child(8) {
+        grid-column: 4 / 5;
+    }
+    .container div:nth-child(9) {
+        grid-column: 1 / 4;
+    }
+    .container div:nth-child(10) {
+        grid-column: 4 / 5;
+    }
+}
+@media (min-width: 320px) and (max-width: 480px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr ;
+        grid-auto-rows: auto;
+        grid-template-rows: 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
+        grid-gap: 20px;
+    }
+    .desktop, .tablet {
+        visibility: hidden;
+    }
+    .mobile {
+        visibility: visible;
+        background-color: aquamarine;
+    }
+    .container div:nth-child(1) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(2) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(3) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(4) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(5) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(6) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(7) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(8) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(9) {
+        grid-column: 1 / -1;
+    }
+    .container div:nth-child(10) {
+        grid-column: 1 / -1;
     }
 }
