started about me page and styled the heading

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -2,6 +2,9 @@
 .title {
     color: whitesmoke;
     text-align: center;
+    height: 100px;
+    width: 100%;
+    text-decoration: underline
 }
 body {
    background-image: url('../images/ss.jpg');
