--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -210,7 +210,7 @@ div.school {
 /* .container15 {
     height: 200px;
     background-color: white; */
-}
+/* } */
 
 div.stripe4 {
     background-image: url(../img/stripe4.png);
@@ -237,7 +237,7 @@ div.stripe4 {
     display: flex;
     height: 150px;
     width: 500px; */
-}
+/* } */
 .hcj {
     display: grid;
     height: 150px;
@@ -247,17 +247,18 @@ div.stripe4 {
 
 .list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr ;
     font-family: muli;
     margin-left: 100px;
-    font-size: 40px;
+    font-size: 20px;
     /* justify-content: center; */
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    
 }
 
 .list p {
-    padding: 50px;
+    padding: 20px;
 }
 .container16 {
     height: 70px;
@@ -392,3 +393,4 @@ div.stripe5 {
     .aca-logo {
         display: none;
     }
+}
