bio html and css

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -16,17 +16,16 @@ header {
 }
 #section {
   background-image: url(https://2016.export.gov/texas/build/groups/public/@eg_us_tx/documents/webcontent/~export/eg_us_tx_019269~27~DCT_Center_Content_2col/340555-6.jpg);
-  position: fixed;
-  float: unset;
+  top: 20px;
   align-content: center;
-  position: static;
+  position: fixed;
+  margin: 0;
   display: block;
   border: 10px solid green; 
   text-align: center;
   content: 100%;
   margin-top: 0px;
   margin-bottom: 10px;
-  padding-top: px;
   height: 460px;
   Width: 810px;
   padding-left: 300px;
@@ -48,7 +47,7 @@ header {
 
 
 #sidebar {
-  position: fixed;
+  position: static;
   float: unset;
   display: block;
   text-align: center;
