--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,106 @@
+body {
+    font-family: 'Noto Sans', sans-serif;
+}
 
+.flexCenter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.headerBox {
+    top: 0;
+    position: absolute;
+    width: 100%;
+}
+
+.logo {
+    width: 80px;
+    margin: 10px;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 24pt;
+    font-weight: 500;
+    color: whitesmoke;
+    text-shadow: 10px 10px solid black;
+}
+
+.pageTopTitle {
+    position: absolute;
+    top: 0;
+    z-index: -2;
+    height: 650px;
+    width: 100%;
+    background-image: url(../assets/whatisspacet.jpg);
+}
+
+.pageTopTitle h1 {
+    color: white;
+    font-size: 32pt;
+    font-weight: 500;
+    text-align: center;
+    padding: 10px;
+}
+
+.bold {
+    font-weight: 700;
+    font-style: italic;
+    font-size: 36pt;
+}
+
+.portfolio {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px -2px 20px black;
+    margin-top: 650px;
+    padding: 12px 0px;
+    background: black;
+}
+
+.folioBox {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 12px 24px 12px 24px;
+    border: 1px solid black;
+    border-radius: 8px;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
+}
+
+.projectHeader {
+    margin: 10px 0px;
+    font-size: 36pt;
+}
+
+.folioBox p {
+    margin: 10px 30px;
+    font-size: 14pt;
+}
+
+.folioBox > div {
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    margin: 0px 10px;
+    box-shadow: 0px 0px 10px black;
+}
+
+.project1 {
+    background-image: url(../assets/space-advisor-website.jpg);
+}
+
+.project2 {
+    background-image: url(../assets/levenopmars.natgeotv_0007_1.jpg);
+}
+
+.project3 {
+    background-image: url(../assets/space-design.jpg);
+}
+
+.project4 {
+    background-image: url(../assets/space_travel_01.png);
+}
