changed a few things

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -315,6 +315,14 @@ footer {
     color: #333;
 }
 
+.icon {
+    transition: transform 1s;
+}
+
+.icon:hover, .fa:active {
+    transform: scale(1.3);
+}
+
 small {
     color: whitesmoke;
     font-size: 8pt;
@@ -338,6 +346,7 @@ small {
 
     .title {
         font-size: 48pt;
+        margin-top: 100px;
     }
 
     .bold {
