changed footer flex

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -357,7 +357,7 @@ small {
         width: 400px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         font-size: 14pt;
     }
