few minor tweaks adding :active to :hover rules

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -132,7 +132,7 @@ li {
 	}
 }
 
-.folioBox:hover {
+.folioBox:hover, .folioBox:active {
     animation: bounce 1s;
 }
 
@@ -242,16 +242,7 @@ footer {
 .wideSocial {
     display: none;
 }
-/*
-.address::before {
-    font-family: 'FontAwesome'; content: '\f276';
-}
 
-.phone::before {
-    font-family: 'FontAwesome'; content: '\f095';
-    margin-right: 10px;
-}
-*/
 .footerBox > i {
     display: none;
 }
