--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -195,6 +195,7 @@ li {
     font-size: 16pt;
     border: none;
     border-radius: 2px;
+    padding: 0px 6px;
 }
 
 textarea {
@@ -203,6 +204,7 @@ textarea {
     border: none;
     border-radius: 2px;
     margin-bottom: 20px;
+    padding: 6px;
 }
 
 .submit {
