--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -23,11 +23,10 @@
         "nav footer footer footer footer";
 }
 
-
 #navcol{
-    display: none;
     grid-area: nav;
     outline: 1px black solid;
+    display: none;
 }
     #navlist{
         margin: 5px;
@@ -73,4 +72,15 @@ header{
 
 .section1{
     grid-area: body;
+    width: 500px;
+    height: 500px;
+    background-color: antiquewhite;
+}
+.listheader{
+    font-weight: bold;
+    border-bottom: 1px black solid;
+}
+
+.navlist:hover{
+    opacity: .5;
 }
