testing a push cuz i made a new repository for non-class projects and want to ensure I didnt screw up this one in the process

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -8,6 +8,7 @@ a{
     color: whitesmoke;
 }
 
+/*flex center class that I made in case I had to use these rules more than once*/
 .flexCenter {
     display: flex;
     align-items: center;
