--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,86 +1,102 @@
-.containerstyle{
-    font-family: 'Roboto', sans-serif;
-    display: grid;
-    grid-template-columns: 0px auto auto auto auto;
-    grid-template-rows: auto;
-    grid-template-areas: 
-        "nav header header header header"
-        "nav body body body body"
-        "nav body body body body"
-        "nav footer footer footer footer";
+body{
+    font-family: "Roboto", sans-serif;
+    cursor: default;
 }
 
-.navstyle{
-    font-family: 'Roboto', sans-serif;
-    display: grid;
-    grid-template-columns: 150px auto auto auto;
-    grid-template-rows: auto;
-    background-color: aquamarine;
-    grid-template-areas: 
-        "nav header header header header"
-        "nav body body body body"
-        "nav body body body body"
-        "nav footer footer footer footer";
+.containerstyle {
+  display: grid;
+  grid-template-columns: 0px auto auto auto auto;
+  grid-template-rows: auto;
+  grid-gap: 0;
+  grid-template-areas:
+    "nav header header header header"
+    "nav body body body body"
+    "nav body body body body"
+    "nav footer footer footer footer";
 }
 
-#navcol{
-    grid-area: nav;
-    outline: 1px black solid;
-    display: none;
-}
-    #navlist{
-        margin: 5px;
-        margin-top: 15px;
-        font-size: 20pt;
-    }
-        .navitem{
-            margin-bottom:20px;
-        }
-
-header{
-    background-color: aqua;
-    outline: 1px black solid;
-
-    grid-area: header;
-    display: flex;
-}
-    #navcon{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-    
-    .navbtn{
-        width: 35px;
-        height: 5px;
-        background-color: black;
-        margin-left: 5px;
-
-       
-    }
-    h1{
-        font-size: 35pt;
-        font-weight: bolder;
-        margin: auto;
-        margin-left: 5%;
-    }
-    h2{
-        font-size: 30pt;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-.section1{
-    grid-area: body;
-    width: 500px;
-    height: 500px;
-    background-color: antiquewhite;
-}
-.listheader{
-    font-weight: bold;
-    border-bottom: 1px black solid;
+.navstyle {
+  display: grid;
+  grid-template-columns: 150px auto auto auto;
+  grid-template-rows: auto;
+  grid-gap: 0;
+  grid-template-areas:
+    "nav header header header header"
+    "nav body body body body"
+    "nav body body body body"
+    "nav footer footer footer footer";
 }
 
-.navlist:hover{
-    opacity: .5;
+#navcol {
+  grid-area: nav;
+  display: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0px;
+  background-color: lightblue;
+}
+#navlist {
+  margin: 5px;
+  margin-top: 15px;
+  font-size: 20pt;
+}
+.navitem {
+  margin-bottom: 20px;
+}
+
+header {
+  min-height: 75px;
+  grid-area: header;
+  display: flex;
+  background-color: lightblue;
+}
+.navcon {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  justify-content: space-evenly;
+}
+
+.navbtn {
+  width: 35px;
+  height: 6px;
+  background-color: black;
+  margin-left: 5px;
+}
+h1 {
+  font-size: 35pt;
+  font-weight: bolder;
+  margin-top: auto;
+  margin-right: auto;
+  margin-left: 30px;;
+}
+h2 {
+  font-size: 25pt;
+  margin-left: 10px;
+  margin-right: 35px;
+  margin-top: auto;
+}
+
+.section1 {
+  grid-area: body;
+  width: 500px;
+  height: 500px;
+}
+#navtopbtn{
+    min-height: 75px;
+    min-width: 150px;
+}
+.listheader {
+  font-weight: bold;
+  font-size: 18pt;
+  border-bottom: 1px black solid;
+}
+
+.navlist {
+  margin-bottom: 3px;
+  margin-top: 5px;
+}
+.navlist:hover {
+  opacity: 0.5;
 }
