worked on my resume

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,21 +1,62 @@
 *{
   margin: 0px;
   padding: 0px;
+  border: 0;
   font-family: sans-serif;
+  
   
 
 }
+body {
+  background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/60/62/4857a5f94f17876.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  
+}
+
 header {
+  background-color: rgb(66, 10, 197);
+  color: yellow;
+  width: 100%;
+  height: 18%;
   align-content: center;
+  text-align: center;
+  font-size: 30px;
+}
+  /* align-content: center;f
   float: unset;
   color: white;
   text-align: center;
   font-family: fantasy;
-  font-weight: 600;
-  background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/60/62/4857a5f94f17876.jpg)
+  font-weight: 600; */
+header h1 {
+  font-family: cursive;
+  font-stretch: expanded;
+
+
+}
+section{
+  display: block;
+  float: right;
+  width: 57%;
+  padding 30px;
+  
 }
 #section {
-  background-image: url(https://2016.export.gov/texas/build/groups/public/@eg_us_tx/documents/webcontent/~export/eg_us_tx_019269~27~DCT_Center_Content_2col/340555-6.jpg);
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  /* border: 3px solid white; */
+  height: 100%;
+  padding-top: 10px;
+  padding-left 30px;
+  border-top: 0;
+  
+
+
+  /* background-image: url(https://2016.export.gov/texas/build/groups/public/@eg_us_tx/documents/webcontent/~export/eg_us_tx_019269~27~DCT_Center_Content_2col/340555-6.jpg);
   top: 20px;
   align-content: center;
   position: fixed;
@@ -33,36 +74,54 @@ header {
   margin-right: 0px;
   line-break: 50px;
   line-height: 30px;
-  text-emphasis: open;
+  text-emphasis: open; */
 
 }
 
+a {
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+  border: 10px;
+}
+a:visited {
+  color: white;
+}
+p {
+  color: yellow;
+}
+
 #section ul li {
+  border: 30px;
   list-style: square;
   font-weight: bold;
-  
+  font-size: 30px;
+  text-align: center;
+  line-height: 200%;
+  color: rgb(239, 241, 99);
+
 
 }
 
 
 
 #sidebar {
-  position: static;
-  float: unset;
-  display: block;
+  /* position: static; */
+  display:block;
+  float: left;
   text-align: center;
-  width: 550px;
-  height: 54%;
-  background-color: rgb(67, 13, 216);
+  width: 40%;
+  height: 100%;
+  background-color: rgba(13, 118, 216, 0.685);
   line-height: 100px;
   padding: 0%;
   margin-top: 0px;
+  font-size: 30px;
 
   
 }
 #sidebar ol li {
   border-top: 10px solid;
-  line-height: 600%;
   display: block;
   
 }
@@ -71,18 +130,15 @@ aside {
   color: white;
 }
 
-article {
-align-content: center;
-margin-left: auto;
-margin-right: auto;
 
+table {
+  
 }
-#articletable {
+#table {
+  border: 3px solid red;
   align-content: center;
-  display: block;
-  float: unset;
+  display: inline-block;
   text-align: center;
-  align-content: center;
   width: 300 px;
   height: 100 px;
   border: 5px solid green;
