worked on the table and footer

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -41,7 +41,7 @@ section{
   display: block;
   float: right;
   width: 57%;
-  padding 30px;
+  text-align: justify;
   
 }
 #section {
@@ -51,9 +51,9 @@ section{
   /* border: 3px solid white; */
   height: 100%;
   padding-top: 10px;
-  padding-left 30px;
+  padding-left: 30px;
   border-top: 0;
-  
+
 
 
   /* background-image: url(https://2016.export.gov/texas/build/groups/public/@eg_us_tx/documents/webcontent/~export/eg_us_tx_019269~27~DCT_Center_Content_2col/340555-6.jpg);
@@ -130,51 +130,39 @@ aside {
   color: white;
 }
 
-
-table {
-  
-}
-#table {
-  border: 3px solid red;
+article {
+  display: block;
   align-content: center;
-  display: inline-block;
-  text-align: center;
-  width: 300 px;
-  height: 100 px;
-  border: 5px solid green;
-  padding: 15px 10px;
+  padding: 1%;
   
-  position: static;
-  vertical-align: middle;
 }
+table {
 
-th, td {
-  float: unset;
-  border-collapse: collapse;
-  border: 1px solid black;
-  padding: 20px;
+  display: inline-block;
+  background-color: rgba(255, 255, 0, 0.74);
+  height: 30%;
+  width: 100%;
+  font-size: 60px;
+  
+
+}
+table, th, td {
+  border: 3px solid purple;
+  align-content: center;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-
 
 
 }
+
 footer {
   align-content: center;
-  padding: 30%;
-
-}
-
-
-
-#footer {
-  position: relative;
-  float: unset;
-  text-emphasis: filled double-circle blue;
-  text-align: inherit;
-  margins: 10px;
   text-align: center;
-  font-weight: bold;
-  
+  border: 3 px solid red;
 }
+footer a {
+  color: blue;
+}
+footer a:visited {
+  color: blue;
+}
+
